# WatchTogether

./: .gitignore
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  room_manager.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 0a8266b45de0_add_message_model.py  acdae5cc3403_add_password_columns_and_refreshtoken_.py  ec9ebcae9930_add_room_and_roommember_models.py
backend/routers/: auth_routes.py  room_routes.py  user_routes.py  websocket_routes.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  style.css
frontend/src/components/: AuthModal.vue  CreateRoomModal.vue
frontend/src/composables/: useRoomSocket.ts  useWebRTC.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: Dashboard.vue  LandingPage.vue  RoomView.vue
